--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ charset-normalizer==3.4.2
 cryptography==45.0.5
 defusedxml==0.7.1
 Django==5.2.4
+django-environ==0.12.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 djoser==2.3.1
+gunicorn==21.2.0
 idna==3.10
 oauthlib==3.3.1
 pycparser==2.22
@@ -19,3 +21,5 @@ social-auth-app-django==5.5.1
 social-auth-core==4.7.0
 sqlparse==0.5.3
 urllib3==2.5.0
+uvicorn==0.31.0
+uvloop==0.21.0
