--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Check Docker Compose Version
         run: docker-compose --version
+      
+      - name: Docker login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push the latest images
         run: |
@@ -19,11 +22,9 @@ jobs:
 
       - name: Pull the latest images
         run: |
-          cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml pull
 
       - name: Deploy the application
         run: |
-          cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml down
           docker-compose -f docker-compose.dev.yml up -d --build
