--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -14,17 +14,17 @@ jobs:
       
       - name: Docker login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Push the latest images
-        run: |
-          cd /home/ubuntu/deploy/sma-backend-docker/
-          docker-compose -f docker-compose.dev.yml push
+        
+      - name: Change to deployment directory
+        run: cd /home/ubuntu/deploy/sma-backend-docker/
 
       - name: Pull the latest images
         run: |
+          cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml pull
 
       - name: Deploy the application
         run: |
+          cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml down
           docker-compose -f docker-compose.dev.yml up -d --build
