--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -13,7 +13,10 @@ jobs:
         run: docker-compose --version
       
       - name: Docker login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: |
+          echo "Docker username length: ${#DOCKER_USERNAME}"
+          echo "Docker password length: ${#DOCKER_PASSWORD}"
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         
       - name: Change to deployment directory
         run: cd /home/ubuntu/deploy/sma-backend-docker/
