--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -12,11 +12,8 @@ jobs:
       - name: Check Docker Compose Version
         run: docker-compose --version
       
-      - name: Docker login
-        run: |
-          echo "Docker username length: ${#DOCKER_USERNAME}"
-          echo "Docker password length: ${#DOCKER_PASSWORD}"
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Docker Login
+        run: echo "${{ vars.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
         
       - name: Change to deployment directory
         run: cd /home/ubuntu/deploy/sma-backend-docker/
