--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -7,13 +7,14 @@ on:
 jobs:
   deploy:
     runs-on: bitnova-runner
+    environment: master
 
     steps:
       - name: Check Docker Compose Version
         run: docker-compose --version
       
       - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ vars.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
         
       - name: Change to deployment directory
         run: cd /home/ubuntu/deploy/sma-backend-docker/
