--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -3,52 +3,94 @@ name: SMA Backend Development Environment
 on:
   pull_request:
     branches: [master]
+  workflow_dispatch:  # Enables manual trigger
 
 jobs:
-  build-and-push:
+  dev-build:
     runs-on: ubuntu-latest
     environment: master
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
-      
+
       - name: Docker Login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
-      
-      - name: Build and Push Docker images
-        run: |
-          docker-compose -f docker-compose.dev.yml build
-          docker-compose -f docker-compose.dev.yml push
 
-  deploy:
+      - name: Build Docker images
+        run: docker-compose -f docker-compose.dev.yml build
+
+  dev-push-to-hub:
+    runs-on: ubuntu-latest
+    environment: master
+    needs: dev-build
+
+    steps:
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push Docker images
+        run: docker-compose -f docker-compose.dev.yml push
+
+  dev-pull-from-hub:
     runs-on: bitnova-runner
     environment: master
-    needs: build-and-push
-    
+    needs: dev-push-to-hub
+
     steps:
-      - name: Check Docker Compose Version
-        run: docker-compose --version
-      
       - name: Docker Login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
-        
+
       - name: Pull the latest images
         run: |
           cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml pull
 
+  deploy-to-dev:
+    runs-on: bitnova-runner
+    environment: master
+    needs: dev-pull-from-hub
+
+    steps:
+      - name: Prepare Environment Variables
+        run: |
+          chmod +x ./setup-cicd-env/setup.sh
+          ./setup-cicd-env/setup.sh
+
       - name: Deploy the application
         run: |
           cd /home/ubuntu/deploy/sma-backend-docker/
-          docker-compose -f docker-compose.dev.yml down
           docker-compose -f docker-compose.dev.yml up -d --build
+
+  dev-down:
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: bitnova-runner
+    environment: master
+    needs: dev-pull-from-hub
+
+    steps:
+      - name: Take down the dev environment
+        run: |
+          cd /home/ubuntu/deploy/sma-backend-docker/
+          docker-compose -f docker-compose.dev.yml down
+
+  dev-up:
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: bitnova-runner
+    environment: master
+    needs: dev-down  # or dev-pull-from-hub if you don't want strict sequencing
+
+    steps:
+      - name: Bring up the dev environment
+        run: |
+          cd /home/ubuntu/deploy/sma-backend-docker/
+          docker-compose -f docker-compose.dev.yml up -d
