--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Docker images
         run: docker-compose -f docker-compose.dev.yml build
       - name: Push Docker images
-        run: docker-compose -f docker-compose.dev.yml push  
+        run: docker-compose -f docker-compose.dev.yml push
 
   dev-pull-from-hub:
     runs-on: bitnova-runner
@@ -59,6 +59,9 @@ jobs:
     needs: dev-pull-from-hub
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Prepare Environment Variables
         run: |
           chmod +x ./setup-cicd-env/setup.sh
