--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -1,81 +1,69 @@
-name: SMA Backend Development Environment
+name: SMA Backend CI/CD
 
 on:
   push:
     branches: [master]
 
 jobs:
-  build-and-push-dev-image:
+  build-and-push:
     runs-on: ubuntu-latest
     environment: dev
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Install Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
 
-      - name: Prepare Environment Variables
+      - name: Prepare .env File
         env:
-          EMAIL_HOST: ${{ vars.EMAIL_HOST }}
-          EMAIL_PORT: ${{ vars.EMAIL_PORT }}
-          EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }}
-          EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }}
-          EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }}
-          SECRET_KEY: ${{ vars.SECRET_KEY }}
-          DEBUG: ${{ vars.DEBUG }}
-          ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }}
-          TEST: ${{ vars.TEST }}
+          EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
+          EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
+          EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
+          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+          EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
+          ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+          TEST: ${{ secrets.TEST }}
         run: |
           chmod +x ./setup-cicd-env/script.sh
           ./setup-cicd-env/script.sh
-          cat ./sma_backend/conf/.env
 
       - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker images
-        run: docker-compose -f docker-compose.dev.yml build
-        
-      - name: Push Docker images
-        run: docker-compose -f docker-compose.dev.yml push
-
-  dev-pull-from-hub:
-    runs-on: bitnova-runner
-    environment: dev
-    needs: build-and-push-dev-image
-
-    steps:
-      - name: Install Docker Compose (if not available)
+      - name: Build & Push Docker Image
         run: |
-          docker-compose --version || {
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-            docker-compose --version
-          }
+          docker-compose -f docker-compose.dev.yml build
+          docker-compose -f docker-compose.dev.yml push
 
-      - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Pull the latest images
-        run: |
-          cd /home/ubuntu/deploy/sma-backend-docker/
-          docker-compose -f docker-compose.dev.yml pull
+      - name: Upload .env file
+        uses: actions/upload-artifact@v4
+        with:
+          name: env-file
+          path: ./sma_backend/conf/.env
 
   deploy-to-dev:
     runs-on: bitnova-runner
     environment: dev
-    needs: dev-pull-from-hub
+    needs: build-and-push
 
     steps:
-      - name: Deploy the application
+      - name: Download .env file
+        uses: actions/download-artifact@v4
+        with:
+          name: env-file
+          path: /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf
+
+      - name: Copy docker-compose file to deploy directory
+        run: |
+          cp docker-compose.dev.yml /home/ubuntu/deploy/sma-backend-docker/
+
+      - name: Deploy Container
         run: |
           cd /home/ubuntu/deploy/sma-backend-docker/
           docker-compose -f docker-compose.dev.yml down --remove-orphans
