--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -10,7 +10,7 @@ jobs:
     environment: dev
 
     steps:
-      - name: Checkout code
+      - name: bitnova-runner
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
@@ -36,7 +36,6 @@ jobs:
         run: |
           chmod +x ./setup-cicd-env/script.sh
           ./setup-cicd-env/script.sh
-          cat ./sma_backend/conf/.env
 
       - name: Docker Login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
