CI CD Implementing

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-push-dev-image:
-    runs-on: ubuntu-latest
+    runs-on: bitnova-runner
     environment: dev
 
     steps:
@@ -52,9 +52,6 @@ jobs:
     needs: build-and-push-dev-image
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
       - name: Install Docker Compose (if not available)
         run: |
           docker-compose --version || {
@@ -62,27 +59,6 @@ jobs:
             sudo chmod +x /usr/local/bin/docker-compose
             docker-compose --version
           }
-
-      - name: Create Environment Variables for pull
-        env:
-          EMAIL_HOST: ${{ vars.EMAIL_HOST }}
-          EMAIL_PORT: ${{ vars.EMAIL_PORT }}
-          EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }}
-          EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }}
-          EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }}
-          SECRET_KEY: ${{ vars.SECRET_KEY }}
-          DEBUG: ${{ vars.DEBUG }}
-          ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }}
-          TEST: ${{ vars.TEST }}
-        run: |
-          chmod +x ./setup-cicd-env/script.sh
-          ./setup-cicd-env/script.sh
-          
-      - name: Copy files to deployment directory
-        run: |
-          mkdir -p /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf
-          cp docker-compose.dev.yml /home/ubuntu/deploy/sma-backend-docker/
-          cp ./sma_backend/conf/.env /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf/
 
       - name: Docker Login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
@@ -96,7 +72,15 @@ jobs:
     runs-on: bitnova-runner
     environment: dev
     needs: dev-pull-from-hub
-    steps:        
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Copy docker-compose file to deployment directory
+        run: |
+          cp docker-compose.dev.yml /home/ubuntu/deploy/sma-backend-docker/
+
       - name: Deploy the application
         run: |
           cd /home/ubuntu/deploy/sma-backend-docker/
