--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -6,96 +6,87 @@ on:
 
 jobs:
   build-and-push-dev-image:
-    runs-on: bitnova-runner
+    runs-on: ubuntu-latest
     environment: dev
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Docker Compose
-        run: |
-          docker-compose --version || {
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-            docker-compose --version
-          }
+name: Set up Docker Buildx
+uses: docker/setup-buildx-action@v3
 
-      - name: Clean Docker system
-        run: |
-          docker system prune -f
-          docker builder prune -f
+name: Install Docker Compose
+run: |
+  sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+  sudo chmod +x /usr/local/bin/docker-compose
+  docker-compose --version
 
-      - name: Prepare Environment Variables
-        env:
-          EMAIL_HOST: ${{ vars.EMAIL_HOST }}
-          EMAIL_PORT: ${{ vars.EMAIL_PORT }}
-          EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }}
-          EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }}
-          EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }}
-          SECRET_KEY: ${{ vars.SECRET_KEY }}
-          DEBUG: ${{ vars.DEBUG }}
-          ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }}
-          TEST: ${{ vars.TEST }}
-        run: |
-          chmod +x ./setup-cicd-env/script.sh
-          ./setup-cicd-env/script.sh
+name: Prepare Environment Variables
+env:
+  EMAIL_HOST: ${{ vars.EMAIL_HOST }}
+  EMAIL_PORT: ${{ vars.EMAIL_PORT }}
+  EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }}
+  EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }}
+  EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }}
+  SECRET_KEY: ${{ vars.SECRET_KEY }}
+  DEBUG: ${{ vars.DEBUG }}
+  ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }}
+  TEST: ${{ vars.TEST }}
+run: |
+  chmod +x ./setup-cicd-env/script.sh
+  ./setup-cicd-env/script.sh
 
-      - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+name: Docker Login
+run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker images
-        run: |
-          export DOCKER_BUILDKIT=1
-          docker-compose -f docker-compose.dev.yml build --no-cache
-        
-      - name: Push Docker images
-        run: docker-compose -f docker-compose.dev.yml push
+name: Build Docker images
+run: docker-compose -f docker-compose.dev.yml build
 
-  deploy-to-dev:
-    runs-on: bitnova-runner
-    environment: dev
-    needs: build-and-push-dev-image
+name: Push Docker images
+run: docker-compose -f docker-compose.dev.yml push
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+dev-pull-from-hub:
+runs-on: bitnova-runner
+environment: dev
+needs: build-and-push-dev-image
 
-      - name: Install Docker Compose (if not available)
-        run: |
-          docker-compose --version || {
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-            docker-compose --version
-          }
+steps:
 
-      - name: Prepare Environment Variables
-        env:
-          EMAIL_HOST: ${{ vars.EMAIL_HOST }}
-          EMAIL_PORT: ${{ vars.EMAIL_PORT }}
-          EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }}
-          EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }}
-          EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }}
-          SECRET_KEY: ${{ vars.SECRET_KEY }}
-          DEBUG: ${{ vars.DEBUG }}
-          ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }}
-          TEST: ${{ vars.TEST }}
-        run: |
-          chmod +x ./setup-cicd-env/script.sh
-          ./setup-cicd-env/script.sh
+name: Checkout code
+uses: actions/checkout@v4
 
-      - name: Setup deployment directory
-        run: |
-          mkdir -p /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf
-          cp docker-compose.dev.yml /home/ubuntu/deploy/sma-backend-docker/
-          cp ./sma_backend/conf/.env /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf/
+name: Install Docker Compose (if not available)
+run: |
+  docker-compose --version || {
+    sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    sudo chmod +x /usr/local/bin/docker-compose
+    docker-compose --version
+  }
 
-      - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+name: Create Environment Variables for pull env: EMAIL_HOST: ${{ vars.EMAIL_HOST }} EMAIL_PORT: ${{ vars.EMAIL_PORT }} EMAIL_USE_TLS: ${{ vars.EMAIL_USE_TLS }} EMAIL_HOST_USER: ${{ vars.EMAIL_HOST_USER }} EMAIL_HOST_PASSWORD: ${{ vars.EMAIL_HOST_PASSWORD }} SECRET_KEY: ${{ vars.SECRET_KEY }} DEBUG: ${{ vars.DEBUG }} ALLOWED_HOSTS: ${{ vars.ALLOWED_HOSTS }} TEST: ${{ vars.TEST }} run: | chmod +x ./setup-cicd-env/script.sh ./setup-cicd-env/script.sh
+name: Copy files to deployment directory
+run: |
+  mkdir -p /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf
+  cp docker-compose.dev.yml /home/ubuntu/deploy/sma-backend-docker/
+  cp ./sma_backend/conf/.env /home/ubuntu/deploy/sma-backend-docker/sma_backend/conf/
 
-      - name: Pull and Deploy
-        run: |
-          cd /home/ubuntu/deploy/sma-backend-docker/
-          docker-compose -f docker-compose.dev.yml pull
-          docker-compose -f docker-compose.dev.yml down --remove-orphans
-          docker-compose -f docker-compose.dev.yml up -d
+name: Docker Login
+run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ vars.DOCKER_USERNAME }}" --password-stdin
+
+name: Pull the latest images
+run: |
+  cd /home/ubuntu/deploy/sma-backend-docker/
+  docker-compose -f docker-compose.dev.yml pull
+
+deploy-to-dev:
+runs-on: bitnova-runner
+environment: dev
+needs: dev-pull-from-hub
+steps:
+
+name: Deploy the application
+run: |
+  cd /home/ubuntu/deploy/sma-backend-docker/
+  docker-compose -f docker-compose.dev.yml down --remove-orphans
+  docker-compose -f docker-compose.dev.yml up -d
