--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -63,8 +63,8 @@ jobs:
           EMAIL_PORT="${{ vars.EMAIL_PORT }}"
           EMAIL_USE_TLS="${{ vars.EMAIL_USE_TLS }}"
           EMAIL_HOST_USER="${{ vars.EMAIL_HOST_USER }}"
-          EMAIL_HOST_PASSWORD="${{ vars.EMAIL_HOST_PASSWORD }}"
-          SECRET_KEY="${{ vars.SECRET_KEY }}"
+          EMAIL_HOST_PASSWORD="${{ secrets.EMAIL_HOST_PASSWORD }}"
+          SECRET_KEY="${{ secrets.SECRET_KEY }}"
           DEBUG="${{ vars.DEBUG }}"
           ALLOWED_HOSTS="${{ vars.ALLOWED_HOSTS }}"
           TEST="${{ vars.TEST }}"
