--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -68,6 +68,15 @@ jobs:
           DEBUG="${{ vars.DEBUG }}"
           ALLOWED_HOSTS="${{ vars.ALLOWED_HOSTS }}"
           TEST="${{ vars.TEST }}"
+
+          MINIO_ENDPOINT="${{ vars.MINIO_ENDPOINT }}"
+          MINIO_ACCESS_KEY="${{ secrets.MINIO_ACCESS_KEY }}"
+          MINIO_SECRET_KEY="${{ secrets.MINIO_SECRET_KEY }}"
+          MINIO_BUCKET_NAME="${{ vars.MINIO_BUCKET_NAME }}"
+          USE_HTTPS="${{ vars.USE_HTTPS }}"
+          AWS_S3_FILE_OVERWRITE="${{ vars.AWS_S3_FILE_OVERWRITE }}"
+          AWS_DEFAULT_ACL="${{ vars.AWS_DEFAULT_ACL }}"
+
           EOF
         
       - name: Deploy the application
