--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,8 @@ http {
 
         listen 80;
 
+        server_name spark.jubayerhossen.info;
+
         location / {
             proxy_pass http://web:8000;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
