--- a/apps/sma_backend/conf/.env
+++ b/apps/sma_backend/conf/.env
@@ -5,7 +5,7 @@ EMAIL_HOST_USER="bitnova.net@gmail.com"
 EMAIL_HOST_PASSWORD="dzmv vjmj zell smlj"
 SECRET_KEY="django-insecure-7t3k@x^plf-z#p+ze_o@u^4ydkk%z=37rxehB5ms)hd3c(!v"
 DEBUG="1"
-ALLOWED_HOSTS="http://localhost:8000,http://127.0.0.1:8000,http://localhost:1337,http://127.0.0.1:1337,http://16.176.7.48:1337,https://ac74a404eb6f.ngrok-free.app"
+ALLOWED_HOSTS="http://localhost:8000,http://127.0.0.1:8000,http://localhost:1337,http://127.0.0.1:1337,http://16.176.7.48:1337"
 TEST="test_dev"
 
 MINIO_ENDPOINT="http://localhost:9000"
